[TaskScheduler]: Fix thread restriction in Thread::WaitUntilThreadStarted.

Thread::WaitUntilThreadStarted was incorrectly marked
ScopedAllowBaseSyncPrimitivesForTesting. Since it's used outside testing,
it is now ScopedAllowBaseSyncPrimitivesOutsideBlockingScope with a bug
to document it needs fixing.

Bug: 918039
Change-Id: Ifdd1bbfd651324021e57c1bdb040e5ba95f3864d
Reviewed-on: https://chromium-review.googlesource.com/c/1391717
Commit-Queue: Etienne Pierre-Doray <etiennep@chromium.org>
Commit-Queue: Gabriel Charette <gab@chromium.org>
Reviewed-by: Gabriel Charette <gab@chromium.org>
Cr-Commit-Position: refs/heads/master@{#619084}
Former-commit-id: 1cef3cd9dee465bae03dfce306fbe0d1d0a94b05